hphp/test/slow/parser/tuple_as_const.php.expectf
Fatal error: Expected constant expression for initializer in %s/tuple_as_const.php on line 9
